# singleRPC

./: .release.toml  Cargo.toml  LICENSE  README.md  build.rs  config.json  test.py
.github/workflows/: release.yml
src/: banner.rs  config.rs  main.rs  proxy.rs  server.rs
