[package]
name = "rust-middleware-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
url = "2.5"
futures = "0.3"
bytes = "1"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["server", "http1", "http2", "tokio"] }
clap = { version = "4", features = ["derive"] }

[[bin]]
name = "singlerpc"
path = "src/main.rs"