[package]
name = "singlerpc"
version = "0.1.0"
edition = "2024"
description = "Robust, blazing-fast single RPC for multiple chains with smart load balancing, health checks, continuous retries, and per-request timeouts built in."
readme = "README.md"
repository = "https://github.com/iamkunal9/singlerpc"
homepage = "https://iamkunal9.github.io/singlerpc/"
license-file = "LICENSE"
keywords = ["web3", "rpc", "evm"]
authors = ["iamkunal9 <kunalsharma0553@gmail.com>"]

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
url = "2.5"
futures = "0.3"
bytes = "1"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["server", "http1", "http2", "tokio"] }
clap = { version = "4", features = ["derive"] }

[[bin]]
name = "singlerpc"
path = "src/main.rs"